# Automation

./: README.md
LMS/Master/: README.md  config.example.json  config.json  pyproject.toml  requirements.txt
LMS/Master/cheek/: Login.py  Nest.py  Parser.py  Variation 2.py  __init__.py  config.py  main.py  utils.py
LMS/Master/data/: test-new.docx  test-new.json  test-new.txt  xpathFile.js
LMS/Master/webdriver/: README.md
