[tool.poetry]
name = "cheek"
version = "0.1.0"
description = ""
authors = ["IgnisDa <ignisda2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
docx2python = "^1.25"
colorama = "^0.4.3"
pyotp = "^2.4.0"
webdriver-manager = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
commitizen = "^2.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
